@@ -12,6 +12,7 @@
    themes with coloured toolbars.
 7. Fix opening menu of pinned item in browse when another browse menu is open.
 8. If rating is 1 or 0.5 and click to set same value then reset rating to 0.
+9. Add 'Remove' to rartings dialog, setting rating to 0.
 
 2.3.3
 -----
